--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "dotnet_apiContext": "Server=(localdb)\\mssqllocaldb;Database=dotnet_apiContext-2e8428c4-20be-4ac1-a55c-a3dfb9f43f5e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
