EF Core migration configuration start

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -22,5 +22,8 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-GSOLUG0;Database=npDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
