Commands and queries for Lesson

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -16,7 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Lessons\" />
+    <Folder Include="Lessons\Commands\" />
+    <Folder Include="Lessons\CommandHandlers\" />
+    <Folder Include="Lessons\QueryHandlers\" />
+    <Folder Include="Questions\" />
   </ItemGroup>
 
 </Project>
