--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -24,6 +24,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "Azure": "Server=tcp:nauciprogserver.database.windows.net,1433;Initial Catalog=nauciProgramiranjeDB;Persist Security Info=False;User ID=nauciProgramiranje;Password=Pwd12345.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "Default": "Server=DESKTOP-GSOLUG0;Database=npDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
